# Evolution

./: .gitignore  CMakeLists.txt  include files
Include/: AtariGame.h  Environment.h  EvolutionTraining.h  Execution.h  Game.h  Gene.h  GenericTrainer.h  Genotype.h  NetTraining.h  Rating.h  SupervisedEnvironment.h  SupervisorTrainer.h  Tests.h  TicTacToe.h  WeightedRandom.h
Source/: AtariGame.cpp  Environment.cpp  EvolutionTraining.cpp  Execution.cpp  Gene.cpp  GenericTrainer.cpp  Genotype.cpp  Main.cpp  NetTraining.cpp  Rating.cpp  SupervisedEnvironment.cpp  SupervisorTrainer.cpp  Tests.cpp  TicTacToe.cpp  WeightedRandom.cpp
